# mandle

./: .gitignore  README.md  package.json
backend/: .env.example  add_feeds.py  pyproject.toml  test_quick_import.py
backend/app/: config.py  main.py
backend/app/api/: content.py  feeds.py  inspire.py  media.py  pipeline.py  queue.py  replies.py  targets.py
backend/app/convex_client/: client.py  queries.py
backend/app/models/: api_models.py
backend/app/prompt_engine/: assembler.py  loader.py  registry.py
backend/app/scheduler/: __init__.py  jobs.py  scheduler.py
backend/app/services/: extractor_service.py  generator_service.py  ingestion_service.py  media_service.py  poster_service.py  reply_service.py  reviewer_service.py
backend/app/utils/: groq_client.py  helpers.py  tweepy_client.py
convex/: contentDrafts.ts  extractedPoints.ts  feeds.ts  mediaAssets.ts  postPerformance.ts  postQueue.ts  rawItems.ts  replyDrafts.ts  schema.ts  systemConfig.ts  targetAccounts.ts
frontend/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  convex.tsx
prompts/brand/: brand_rules.md  brand_voice.md  niche_context.md  offer_context.md
prompts/examples/: bad_examples.md  best_posts.md  user_stories.md
prompts/formats/: format_guidelines.md  format_templates.md
prompts/guidelines/: cta_patterns.md  structuring_guide.md  writing_guidelines.md
prompts/hooks/: hook_examples.md  hook_templates.md
prompts/meta/: changelog.md  prompt_registry.json
(+23 files in other folders)
